--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,16 +6,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/auth/google/login"> <i tag class="fa fa-google left"> </i> Login With Google</a>
+        <a class="nav-link" href="/auth/google/"> <i tag class="fa fa-google left"> </i> Login With Google</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#"> Dashboard </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Host A Game</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
     </ul>
   </div>
