add first iteration footer and icons

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Find A Game</a>
+  <a class="navbar-brand" href="#"><i class="fa fa-gamepad"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,6 +7,9 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="/auth/google/"> <i tag class="fa fa-google left"> </i> Login With Google</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/"><i class="fa fa-home"></i> Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"> Dashboard </a>
