--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,5 @@
-<footer class="bg-dark text-white mt-4">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 text-center"><a href="#"> contact </a></div>
-            <div class="col-md-3 text-right small align-self-end">©2018 Find A Game</div>
-        </div>
-    </div>
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted"> Placeholder </span>
+  </div>
 </footer>
