--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -2,15 +2,38 @@
   <div class="col">
   </div>
   <div class="col-6">
-    <h2> Add A New Game </h2> 
+    <h2> Add A New Game </h2>
     <form action="/games" method="post">
+
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title">
       </div>
 
+      <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input type="checkbox" class="form-check-input" name="Buisness">
+        <label class="form-check-label" for="exampleCheck1">Buisness</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input type="checkbox" class="form-check-input" name="home">
+        <label class="form-check-label" for="exampleCheck1">Home </label>
+      </div>
+
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea class="form-control"  name="description"> </textarea>
+      </div>
+
+
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
   <div class="col">
+  </div>
 </div>
