--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
-<footer class="footer">
-  <div class="container">
-    <span class="text-muted"> Placeholder </span>
+<footer class="footer bg-secondary">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="text-light"> This is a placeholder </h1> 
+    </div>
   </div>
 </footer>
