--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -14,15 +14,30 @@
         <label for="address">Address</label>
         <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
       </div>
+      <div class="form-group">
+        <label for="address">ZIP</label>
+        <input type="text" class="form-control form-control-sm" name="zip">
+      </div>
+
+      <label for="checkbox"> Location Type </label>
 
       <div class="form-check form-check-inline">
-        <input type="checkbox" class="form-check-input" name="Buisness">
-        <label class="form-check-label" for="exampleCheck1">Buisness</label>
+        <input type="checkbox" class="form-check-input" name="buisness">
+        <label class="form-check-label" for="buisness">Buisness</label>
       </div>
 
       <div class="form-check form-check-inline">
         <input type="checkbox" class="form-check-input" name="home">
-        <label class="form-check-label" for="exampleCheck1">Home </label>
+        <label class="form-check-label" for="home">Home </label>
+      </div>
+
+      <div class="input-group">
+        <select class="custom-select" id="experience">
+          <option selected>Choose Experience Level</option>
+          <option value="novice">Novice</option>
+          <option value="experienced">Experienced</option>
+          <option value="veteran">Veteran</option>
+        </select>
       </div>
 
       <div class="form-group">
