--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -15,20 +15,27 @@
         <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
       </div>
       <div class="form-group">
-        <label for="address">ZIP</label>
+        <label for="zip">ZIP</label>
         <input type="text" class="form-control form-control-sm" name="zip">
       </div>
 
-      <label for="checkbox"> Location Type </label>
-
-      <div class="form-check form-check-inline">
-        <input type="checkbox" class="form-check-input" name="buisness">
-        <label class="form-check-label" for="buisness">Buisness</label>
+      <div class="input-group">
+        <select class="custom-select" id="locationType">
+          <option selected>Choose location type</option>
+          <option value="novice">Buisness</option>
+          <option value="experienced">Home</option>
+        </select>
       </div>
+
 
       <div class="form-check form-check-inline">
         <input type="checkbox" class="form-check-input" name="home">
         <label class="form-check-label" for="home">Home </label>
+      </div>
+
+      <div class="form-inline">
+        <label for="number">Number of Players</label>
+        <input type="text" class="form-control form-control-sm mb-2 ml-sm-2" name="number">
       </div>
 
       <div class="input-group">
