--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -20,7 +20,7 @@
       </div>
 
       <div class="input-group">
-        <select class="custom-select" id="locationType">
+        <select class="custom-select" id="locationType" name="locationType">
           <option selected>Choose location type</option>
           <option value="novice">Buisness</option>
           <option value="experienced">Home</option>
@@ -33,7 +33,7 @@
       </div>
 
       <div class="input-group">
-        <select class="custom-select" id="experience">
+        <select class="custom-select" id="experience" name="experience">
           <option selected>Choose Experience Level</option>
           <option value="novice">Novice</option>
           <option value="experienced">Experienced</option>
