--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,6 +20,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/about">About</a>
       </li>
+      <% if (user) { %>
+      <li class="nav-item">
+         <a href="/auth/logout"><i class= "fa fa-sign-out"> </i> Logout </a>
+       </li>
+      <% } %> 
     </ul>
   </div>
 </nav>
