--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -14,6 +14,7 @@
         <label for="address">Address</label>
         <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
       </div>
+
       <div class="form-group">
         <label for="zip">ZIP</label>
         <input type="text" class="form-control form-control-sm" name="zip">
@@ -29,7 +30,7 @@
 
       <div class="form-inline">
         <label for="number">Number of Players</label>
-        <input type="text" class="form-control form-control-sm mb-2 ml-sm-2" name="number">
+        <input type="number" min="1" max="10" class="form-control form-control-sm" name="number">
       </div>
 
       <div class="input-group">
