--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -7,7 +7,9 @@
       <div class="card-body">
         <h5 class="card-title"><%= game.title %> </h5>
         <p class="card-text"><%= game.description %> </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text"> Seeking <%= game.numberOfPlayers %>
+          players </p>
+        <a href="games/show/<%= game.id %>" class="btn btn-primary">See Details</a>
       </div>
     </div>
   </div>
