--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,3 +1,3 @@
 <h1> <%= game.title %>  </h1>
-<p> Posted by <%= game.user.firstName %>
-</p>
+<p> <%= game.description %> </p>
+<p> Hosted by <%= game.user.firstName %>  <%= game.user.lastName %> </p>
