change game schema update navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,9 +22,9 @@
       </li>
       <% if (user) { %>
       <li class="nav-item">
-         <a href="/auth/logout"><i class= "fa fa-sign-out"> </i> Logout </a>
+         <a href="/auth/logout" a class= "nav-link"><i class= "fa fa-sign-out"> </i> Logout </a>
        </li>
-      <% } %> 
+      <% } %>
     </ul>
   </div>
 </nav>
