--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,3 +1,8 @@
 <h1> <%= game.title %>  </h1>
 <p> <%= game.description %> </p>
-<p> Hosted by <%= game.user.firstName %>  <%= game.user.lastName %> </p>
+<a href="#"> Join Game </a>
+<!-- So basically we're going to use our currently logged in user
+And we're going to use this button to have them added to the game object
+found here as a player. Then we need to deincrement our numberofPlayers attribute
+Also need to make sure the current dude is not already signed up to this game   -->
+<p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
