--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -1,22 +1,12 @@
 <h1> This is where we will list the stuff </h1>
 <ul>
-  <li> Users ratings as a player </li>
-  <li> Users ratings as a host </li>
-  <li> Other Stats if I am not lazy </li>
-  <li> Upcoming games </li>
-  <li> Past Games / games in general?  </li>
+  <li> General user info </li>
+  <li> links to previous games </li>
+  <li> links to upcoming games (maybe next in line listed here?)</li>
+  <li> link to games hosted </li>
 </ul>
+<div class= "stuff">
+  <p> Howdy <%= user.firstName %> <%= user.lastName %> </p>
 
-<% games.forEach(function(game){ %>
-  <div class="col-12">
-    <div class="card card-inline">
-      <div class="card-body">
-        <h5 class="card-title"><%= game.title %> </h5>
-        <p class="card-text"><%= game.description %> </p>
-        <p class="card-text"> Seeking <%= game.numberOfPlayers %>
-          players </p>
-        <a href="games/show/<%= game.id %>" class="btn btn-primary">See Details</a>
-      </div>
-    </div>
-  </div>
-<% }) %>
+<a href="/users/hosted" class="btn-primary"> Hosted Games </a>
+</div>
