--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -9,4 +9,6 @@
   <p> Howdy <%= user.firstName %> <%= user.lastName %> </p>
 
 <a href="/users/hosted" class="btn-primary"> Hosted Games </a>
+<a href="/users/played" class="btn-primary"> Played Games </a>
+
 </div>
