fix template issues with flash/ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
 
     <%- include partials/navbar.ejs %>
     <div class="container">
+      <%- include partials/flash_messages %>
       <%- body %>
     </div>
     <%- include partials/footer.ejs %>
