--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -2,7 +2,10 @@
   <div class="col">
   </div>
   <div class="col-6">
+    <%- include ../partials/errors.ejs %>
+
     <h2> Add A New Game </h2>
+
     <form action="/games" method="post">
 
       <div class="form-group">
