increment player value, update views dynamically

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -7,9 +7,14 @@
       <div class="card-body">
         <h5 class="card-title"><%= game.title %> </h5>
         <p class="card-text"><%= game.description %> </p>
+        <% if (game.numberOfPlayers > 0) { %>
         <p class="card-text"> Seeking <%= game.numberOfPlayers %>
           players </p>
-        <a href="games/show/<%= game.id %>" class="btn btn-primary">See Details</a>
+        <% } else { %>
+          <div class="alert alert-success"> <p class="card-text"> Game Full </p>
+          </div>
+        <% } %>
+          <a href="games/show/<%= game.id %>" class="btn btn-primary">See Details</a>
       </div>
     </div>
   </div>
