--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -3,6 +3,14 @@
   </div>
   <div class="col-6">
 
+    <% if(errors.length > 0) {%>
+      <% errors.forEach(function(error){ %>
+         <div class= "alert alert-danger"> <%= error.text %> </div>
+      <% }) %>
+    <% } else { %>
+
+    <% } %>
+
 
     <h2> Add A New Game </h2>
 
