--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,17 +7,17 @@
     <ul class="navbar-nav">
       <% if (user == null) { %>
       <li class="nav-item">
-        <a class="nav-link" href="/auth/google/"> <i tag class="fa fa-google left"> </i> Login With Google</a>
+        <a class="nav-link" href="/auth/google/"> <i class="fab fa-google-plus"></i> Login With Google</a>
       </li>
-      <% } %> 
+      <% } %>
       <li class="nav-item">
         <a class="nav-link" href="/"><i class="fa fa-home"></i> Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/games/add">Host A Game</a>
+        <a class="nav-link" href="/games/add"><i class="fas fa-user-plus"></i> Host A Game </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href="/about"> About </a>
       </li>
       <% if (user) { %>
         <li class="nav-item">
