update user model for reviews, add icons

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
   <body>
 
     <%- include partials/navbar.ejs %>
-    <div class="container">
+    <div class="container" id="main-content">
       <%- include partials/flash_messages %>
       <%- body %>
     </div>
