--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,10 +21,10 @@
       </li>
       <% if (user) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/users/dashboard"> Dashboard </a>
+          <a class="nav-link" href="/users/dashboard"><i class="far fa-address-book"></i> Dashboard </a>
         </li>
         <li class="nav-item">
-         <a href="/auth/logout" a class= "nav-link"><i class= "fa fa-sign-out"> </i> Logout </a>
+         <a href="/auth/logout" a class= "nav-link"><i class="fas fa-sign-out-alt"></i>Logout </a>
         </li>
       <% } %>
     </ul>
