clean up routes code

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -6,6 +6,10 @@
   <input type="submit" value="Join Game" class="btn-success">
 </form>
 <% } %>
+
+<% if(user) %>
+<% } %>
+
 <!-- So basically we're going to use our currently logged in user
 And we're going to use this button to have them added to the game object
 found here as a player. Then we need to deincrement our numberofPlayers attribute
