--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -7,8 +7,16 @@
 </form>
 <% } %>
 
-<% if(user) %>
-<% } %>
+<!-- need to clean up this view logic  -->
+<% game.players.forEach(function(player){
+      if(player.id == user.id ) { %>
+        <div class="form-group">
+          <form action="/users/playerReview/<%= game.id %>" method ="post">
+            <label for="playerReviewBody"> Review Your Game Master </label>
+            <textarea class="form-control" name="playerReviewBody"> </textarea>
+        </div>
+        <% } %>
+<% }) %>
 
 <!-- So basically we're going to use our currently logged in user
 And we're going to use this button to have them added to the game object
