--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -7,17 +7,20 @@
 </form>
 <% } %>
 
-<!-- need to clean up this view logic  -->
-<% game.players.forEach(function(player){
-      if(player.id == user.id ) { %>
-        <div class="form-group">
-          <form action="/users/playerReview/<%= game.id %>" method ="post">
-            <label for="playerReviewBody"> Review Your Game Master </label>
-            <textarea class="form-control" name="playerReviewBody"> </textarea>
-        </div>
-        <% } %>
-<% }) %>
-
+<!-- need to clean up this view logic/make into a drop down  -->
+<% if(user) { %>
+  <% game.players.forEach(function(player){
+        if(player.id == user.id ) { %>
+          <div class="form-group">
+            <form action="/users/playerReview/<%= game.id %>" method ="post">
+              <label for="playerReviewBody"> Review Your Game Master </label>
+              <textarea class="form-control" name="playerReviewBody"> </textarea>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+          <% } %>
+  <% }) %>
+<% } %> 
 <!-- So basically we're going to use our currently logged in user
 And we're going to use this button to have them added to the game object
 found here as a player. Then we need to deincrement our numberofPlayers attribute
