fix player reviews

--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -11,7 +11,7 @@
         <% if (game.host == user.id) { %>
           <form action="/games/<%= game.id %>/?_method=DELETE" method="post" id="delete-form">
             <input type="hidden" name="_method" value="DELETE">
-            <button type="submit" class="btn btn-danger"><i class= "fa fa-remove"></i>
+            <button type="submit" class="btn btn-danger"><i class= "fas fa-trash"></i>
               Delete </button>
           </form>
         <% } %>
@@ -19,3 +19,4 @@
     </div>
   </div>
 <% }) %>
+ <!-- make a drop down that can populate the players in the game with their names and ratings  -->
