--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,4 +1,4 @@
-<!-- throwing error for game object on load?  --> -->
+<!-- throwing error for game object on load?  -->
  <h1> <%= game.title %>  </h1>
 <p> <%= game.description %> </p>
 
@@ -24,6 +24,6 @@
   <% }) %>
 <% } %>
 
-<p> <%= game.players[0].firstName %> </p>
+<%= game.players[0].playerUser.firstName %>
 
 <p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
