--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -11,7 +11,7 @@
 <!-- need to clean up this view logic/make into a drop down   -->
 <% if(user) { %>
   <% game.players.forEach(function(player){
-        if(player.id == user.id ) { %>
+        if(player.playerUser == user.id ) { %>
 
           <div class="form-group">
             <form action="/users/playerReview/<%= game.id %>" method ="post">
@@ -24,6 +24,6 @@
   <% }) %>
 <% } %>
 
-<%= game.players[0].playerUser.firstName %>
+<!-- create dropdown and loop through players in the game, clean up review space  -->
 
 <p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
