add dashboard nav tabs

--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -1,14 +1,1 @@
-<h1> This is where we will list the stuff </h1>
-<ul>
-  <li> General user info </li>
-  <li> links to previous games </li>
-  <li> links to upcoming games (maybe next in line listed here?)</li>
-  <li> link to games hosted </li>
-</ul>
-<div class= "stuff">
-  <p> Howdy <%= user.firstName %> <%= user.lastName %> </p>
-
-<a href="/users/hosted" class="btn-primary"> Hosted Games </a>
-<a href="/users/played" class="btn-primary"> Played Games </a>
-
-</div>
+<%- include ../partials/dashboard_nav.ejs %>
