--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -1,3 +1,5 @@
+<%- include ../partials/dashboard_nav.ejs %>
+
 <h1> <%= title %>   </h1>
 <% games.forEach(function(game){ %>
   <div class="col-12">
