make tabs better

--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -1,13 +1,11 @@
 <ul class="nav nav-tabs">
-
   <li class="nav-item">
-    <a class="nav-link" href="#">Active</a>
+    <a class="nav-link active" data-toggle="tab" role="tab" href="/users/dashboard"> Dashboard </a>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab"  role="tab" href="/users/hosted">Hosted Games</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/users/hosted">Hosted Games</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/users/played">Played Games</a>
+    <a class="nav-link" href="/users/played" data-toggle="tab" role="tab">Played Games</a>
   </li>
 
 </ul>
