--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -1,1 +1,11 @@
 <%- include ../partials/dashboard_nav.ejs %>
+
+<div class="container" id="profile">
+  <h3> <%= user.firstName %>'s  Profile </h3>
+  <ul>
+    <li> Need more info here </li>
+    <li> So most recent game played should show up </li>
+    <li> And also the averaged reviews for both host and player </li>
+    <li> hmmm could make a friends function or something? Maybe too much </li>
+  </ul>
+</div>
