--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -1,11 +1,12 @@
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" data-toggle="tab" role="tab" href="/users/dashboard"> Dashboard </a>
-  <li class="nav-item">
-    <a class="nav-link" data-toggle="tab"  role="tab" href="/users/hosted">Hosted Games</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/users/played" data-toggle="tab" role="tab">Played Games</a>
-  </li>
 
-</ul>
+    <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link" href="/users/dashboard" id="dashboard-tab" role="tab"> Dashboard </a>
+    <li class="nav-item">
+      <a class="nav-link" id="hosted-tab"  href="/users/hosted" role="tab">Hosted Games</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/users/played" id="played-tab" role="tab">Played Games</a>
+    </li>
+
+  </ul>
