--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -31,11 +31,14 @@
 </button>
 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
   <% game.players.forEach(function(player){ %>
-    <a class="dropdown-item" href=#>  <%= player.playerUser.firstName %>  <%= player.playerUser.lastName %> </a>
+    <a class="dropdown-item" href=#> <img src="<%= player.playerUser.image %>" class="img-fluid rounded-circle" id="google-profile"></img>
+       <%= player.playerUser.firstName %>  <%= player.playerUser.lastName %> </a>
   <% }) %>
 </div>
 </div>
 
 
-
-<p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
+<div id="host">
+  <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
+  <p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
+</div>
