--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col">
   </div>
-  <div class="col-6">
+  <div class="col-6 bg-light">
 
     <% if(errors.length > 0) {%>
       <% errors.forEach(function(error){ %>
@@ -12,7 +12,7 @@
     <% } %>
 
 
-    <h2> Add A New Game </h2>
+    <h2 class="text-center"> Add A New Game </h2>
 
     <form action="/games" method="post">
 
@@ -21,16 +21,19 @@
         <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title">
       </div>
 
-      <div class="form-group">
-        <label for="address">Address</label>
-        <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
-      </div>
+      <div class="form-row">
 
-      <div class="form-group">
-        <label for="zip">ZIP</label>
-        <input type="text" class="form-control form-control-sm" name="zip">
-      </div>
+        <div class="col mb-3">
+          <label for="address">Address</label>
+          <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
+        </div>
 
+        <div class="col mb-3">
+          <label for="zip">ZIP</label>
+          <input type="text" class="form-control form-control-sm" name="zip">
+        </div>
+
+      </div>
       <div class="input-group">
         <select class="custom-select" id="locationType" name="locationType">
           <option selected>Choose location type</option>
@@ -62,6 +65,7 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
+
   <div class="col">
   </div>
 </div>
