--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row h-100 align-items-center">
   <div class="col">
   </div>
-  <div class="col-6 bg-light">
+  <div class="col-8 bg-light">
 
     <% if(errors.length > 0) {%>
       <% errors.forEach(function(error){ %>
@@ -65,7 +65,7 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-
   <div class="col">
   </div>
+
 </div>
