--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,14 @@
 <footer class="footer bg-secondary">
   <div class="row">
-    <div class="col-12">
-      <h1 class="text-light"> This is a placeholder </h1> 
+    <div class="col-12 align-items-center text-center">
+
+        <h5 class="text"> Find A Game </h5>
+        <p> Find a game as a player or find players as a host! </p>
+
+        <div class="container">
+        © 2018 Find-A-Game
+        </div>
+      </div>
     </div>
-  </div>
+
 </footer>
