--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,11 @@ body {
     line-height: 60px;
 }
 
+.lead-link{
+  color:inherit;
+  text-decoration: none;
+}
+
 
 #main-content {
   margin-top: 2em;
