--- a/views/index/welcome.ejs
+++ b/views/index/welcome.ejs
@@ -1,1 +1,6 @@
-<h1> Welcome </h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Find a Game </h1>
+    <p class="lead"><a href="/games/add" class="lead-link">Host a game and find your players</a> or <a href='/games' class="lead-link"> find a game.</a></p>
+  </div>
+</div>
