--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 <footer class="footer bg-dark">
-  <div class="container">
-    <h5> test </h5>
+  <div class="container text-center">
+    <span class="text-muted float-left"> Copyright 2018 Find-A-Game </span>
+    <span class="text-muted"> Host</span>
+    <span class="text-muted float-right"> Stuff </span>
   </div>
 </footer>
