--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -34,21 +34,22 @@
 
   </div>
 
-  <div class="form-row">
+  <div class="form-row form-group">
     <label for="number" class="col-form-label">Number of Players</label>
     <div class="col-sm-1">
-      <input type="number" min="1" max="10" class="form-control form-control-sm" name="number">
+      <input type="number" min="1" max="10" class="form-control" name="number">
     </div>
+    <div class="col-sm-4">
+      <select class="custom-select form-control" id="experience" name="experience">
+        <option selected>Choose Experience Level</option>
+        <option value="novice">Novice</option>
+        <option value="experienced">Experienced</option>
+        <option value="veteran">Veteran</option>
+      </select>
+    </div>
+
   </div>
 
-  <div class="input-group  mt-3 mb-3">
-    <select class="custom-select" id="experience" name="experience">
-      <option selected>Choose Experience Level</option>
-      <option value="novice">Novice</option>
-      <option value="experienced">Experienced</option>
-      <option value="veteran">Veteran</option>
-    </select>
-  </div>
 
   <div class="form-group">
     <label for="description">Description</label>
