--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,14 +18,19 @@ body {
     line-height: 60px;
 }
 
-.lead-link{
+.lead-link, a.lead-link:hover{
   color:inherit;
+  text-decoration: none;
+
+}
+
+.footer-link, a.footer-link:hover {
+  color: grey;
   text-decoration: none;
 }
 
-
 #main-content {
-  margin-top: 2em;
+  margin-top
 }
 
 #profile {
