--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="footer bg-dark">
   <div class="container text-center">
 
-    <span class="text-muted float-left"> Host</span>
-    <span class="text-muted "> Copyright 2018 Find-A-Game </span>
-    <span class="text-muted float-right"> Stuff </span>
+    <span class="float-left"> <a href="/games"><img src="/images/d20.svg" class="brand"></img></a></span>
+    <span class="text-muted"> © 2018 Find-A-Game </span>
+    <span class="float-right"><a href="/about" class="footer-link"> About </a> </span>
   </div>
 </footer>
