--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 60px;
@@ -43,4 +43,8 @@ body {
 
 #google-profile {
   width: 10%;
+}
+
+#add-form {
+  margin-bottom: 5em;
 }
