--- a/views/games/add.ejs
+++ b/views/games/add.ejs
@@ -1,7 +1,7 @@
 <div class="row h-100 align-items-center">
   <div class="col">
   </div>
-  <div class="col-8 bg-light">
+  <div class="col-8 bg-light" id="add-form">
 
     <% if(errors.length > 0) {%>
       <% errors.forEach(function(error){ %>
@@ -11,7 +11,9 @@
 
     <% } %>
 
-    <%- include ../partials/add_form.ejs %> 
+    <%- include ../partials/add_form.ejs %>
+
+  </div>
 
   <div class="col">
   </div>
