--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -7,42 +7,36 @@
     <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title">
   </div>
 
-  <div class="form-row form-group">
+  <div class="form-group">
       <label for="address" class="col-form-label">Address</label>
-    <div class="col-sm-3">
       <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
-    </div>
+  </div>
 
+  <div class="form-group">
       <label for="zip" class= "col-form-label">ZIP</label>
-    <div class="col-sm-3">
       <input type="text" class="form-control form-control-sm" name="zip">
-    </div>
   </div>
 
 
-  <div class="form-row form-group">
-
-    <label for="locationType" class="col-form-label"> Location Type </label>
-      <div class="col-sm-3">
+  <div class="form-group">
+    <label for="locationType"> Location Type </label>
         <select class="custom-select d-inline-block" id="locationType" name="locationType">
           <option value="novice">Buisness</option>
           <option value="experienced">Home</option>
         </select>
-      </div>
+  </div>
 
+  <div class="form-group">
       <label for="startTime" class="col-form-label"> Start Time </label>
-        <div class="col-sm-2">
-          <input type="text" class="form-control form-control-sm" name="startTime">
-        </div>
+      <input type="text" class="form-control form-control-sm" name="startTime">
+  </div>
 
-    </div>
+  <div class="form-group">
+    <label for="number">Number of Players</label>
+    <input type="number" min="1" max="10" class="form-control" name="number">
+  </div>
 
-  <div class="form-row form-group">
-    <label for="number" class="col-form-label">Number of Players</label>
-    <div class="col-sm-1">
-      <input type="number" min="1" max="10" class="form-control" name="number">
-    </div>
-    <div class="col-sm-4">
+    <div class="form-group">
       <select class="custom-select form-control" id="experience" name="experience">
         <option selected>Choose Experience Level</option>
         <option value="novice">Novice</option>
@@ -51,9 +45,6 @@
       </select>
     </div>
 
-  </div>
-
-
   <div class="form-group">
     <label for="description">Description</label>
     <textarea class="form-control"  name="description"> </textarea>
@@ -61,5 +52,5 @@
 
 
   <button type="submit" class="btn btn-primary">Submit</button>
+
 </form>
-</div>
