start working on stars feature for reviews

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -21,5 +21,13 @@
   </div>
 <% }) %>
 
+  <div class="stars-outer">
+    <div class="stars-inner"></div>
+  </div>
+  <span class="number-rating"></span>
 
 </div>
+
+<script>
+
+</script>
