--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -22,6 +22,7 @@
               <div class="form-group">
                 <form action="/users/playerReview/<%= game.id %>" method ="post">
                   <label for="playerReviewBody"> Review Your Game Master </label>
+                  <input type="number" name="playerRating"  class="rating" />
                   <textarea class="form-control" name="playerReviewBody"> </textarea>
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
