--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,16 +18,12 @@ body {
     line-height: 60px;
 }
 
-.lead-link, a.lead-link:hover{
+.plain-link, a.lead-link:hover{
   color:inherit;
   text-decoration: none;
 
 }
 
-.footer-link, a.footer-link:hover {
-  color: inherit;
-  text-decoration: none;
-}
 
 #main-content {
   margin-top
@@ -48,4 +44,36 @@ body {
 #add-form {
   margin-top: 2em;
   margin-bottom: 5em;
+}
+
+
+/* star stuff  */
+
+
+.stars-outer {
+  position: relative;
+  display: inline-block;
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+}
+
+.stars-outer::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #ccc;
+}
+
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #f8ce0b;
 }
