--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 <footer class="footer bg-dark">
   <div class="container text-center">
 
-    <span class="float-left text-muted"> <a href="/games" class="footer-link">Games</a></span>
+    <span class="float-left text-muted"> <a href="/games" class="plain-link">Games</a></span>
     <span class="text-muted"> © 2018 Find-A-Game </span>
-    <span class="float-right text-muted"><a href="/about" class="footer-link"> About </a> </span>
+    <span class="float-right text-muted"><a href="/about" class="plain-link"> About </a> </span>
 
   </div>
 </footer>
