--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ body {
     line-height: 60px;
 }
 
-.plain-link, a.lead-link:hover{
+.plain-link, a.plain-link:hover{
   color:inherit;
   text-decoration: none;
 
