--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -25,7 +25,7 @@
           <div class="dropdown">
             <form action="/games/host_review/<%= game.id %>" method="post">
               <div class="form-group">
-                <input type="hostReview" id="rating-control" class="form-control" step="0.1" max="5" placeholder="Rate 1 - 5">
+                <input type="hostReview" id="rating-control" class="form-control" name="hostReviewScore" step="0.1" max="5" placeholder="Rate 1 - 5">
               </div>
               <div class="form-group">
                 <label for="hostReviewBody">Host Review: </label>
