--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -2,7 +2,7 @@
 <div class="row h-100 align-items-center">
   <div class="col">
   </div>
-  <div class="col-8 text-center bg-light mt-3">
+  <div class="col-8 text-center bg-light">
 
     <h1> <%= game.title %>  </h1>
     <p> <%= game.description %> </p>
