--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -1,7 +1,8 @@
 <div class="dropdown">
+  <!-- make this into functional dropdown  -->
   <form action="/games/host_review/<%= game.id %>" method="post">
     <div class="form-group">
-      <input type="hostReview" id="rating-control" class="form-control" name="hostReviewScore" step="0.1" max="5" placeholder="Rate 1 - 5">
+      <input type="number"  class="form-control" name="hostReviewScore"  min= "1" max="5" placeholder="Rate 1 - 5">
     </div>
 
     <div class="demo">
@@ -15,6 +16,6 @@
     <div class="form-group">
       <label for="hostReviewBody">Host Review: </label>
       <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."> </textarea>
-      <button class="button-btn-submit"> Submit </button>
+      <button class="btn btn-danger"> Submit </button>
     </div>
 </div>
