commit after crash

--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -2,8 +2,12 @@
 
 <div class="container" id="profile">
   <h3> <%= user.firstName %>'s  Profile </h3>
+  <div class="stars-outer">
+    <div class="stars-inner"></div>
+  </div>
   <ul>
     <li> Need more info here </li>
+    <li> Host Rating: <%= user.hostReviewAverage %> </li> 
     <li> So most recent game played should show up </li>
     <li> And also the averaged reviews for both host and player </li>
     <li> hmmm could make a friends function or something? Maybe too much </li>
