--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -1,5 +1,5 @@
 <%- include ../partials/dashboard_nav.ejs %>
-
+<%  $('.stars-inner').style.width
 <div class="container" id="profile">
   <h3> <%= user.firstName %>'s  Profile </h3>
   <div class="stars-outer">
@@ -7,7 +7,7 @@
   </div>
   <ul>
     <li> Need more info here </li>
-    <li> Host Rating: <%= user.hostReviewAverage %> </li> 
+    <li> Host Rating: <%= user.hostReviewAverage %> </li>
     <li> So most recent game played should show up </li>
     <li> And also the averaged reviews for both host and player </li>
     <li> hmmm could make a friends function or something? Maybe too much </li>
