working on star css

--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -1,6 +1,8 @@
 <%- include ../partials/dashboard_nav.ejs %>
-<%  $('.stars-inner').style.width
-<div class="container" id="profile">
+
+
+
+<div class="container profile" >
   <h3> <%= user.firstName %>'s  Profile </h3>
   <div class="stars-outer">
     <div class="stars-inner"></div>
