mess with javascript, update login landing page

--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -9,7 +9,7 @@
   </div>
   <ul>
     <li> Need more info here </li>
-    <li> Host Rating: <span class="hostRating"> <%= user.hostReviewAverage %> </span> </li>
+    <li> Host Rating: <span id="rating" data-rating= "<%= user.hostReviewAverage%>"> <%= user.hostReviewAverage%> </span> </li>
     <li> So most recent game played should show up </li>
     <li> And also the averaged reviews for both host and player </li>
     <li> hmmm could make a friends function or something? Maybe too much </li>
