--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -6,7 +6,7 @@
   <h3> <%= user.firstName %>'s  Profile </h3>
 
   <div class="review-rating">
-    <span id="rating" data-rating= "<%= user.hostReviewAverage%>"> Host Rating: <%= user.hostReviewAverage%> </span>
+    <span class="rating" data-rating= "<%= user.hostReviewAverage%>"> Host Rating: <%= user.hostReviewAverage%> </span>
       <div class="stars-outer">
       <div class="stars-inner"></div>
       </div>
@@ -14,7 +14,7 @@
 
 
     <div class="review-rating">
-      <span data-rating= "<%= user.playerReviewAverage%>"> Player Rating: <%= user.playerReviewAverage%> </span>
+      <span class="rating" data-rating= "<%= user.playerReviewAverage%>"> Player Rating: <%= user.playerReviewAverage%> </span>
         <div class="stars-outer">
         <div class="stars-inner"></div>
         </div>
