change css on show game page

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -5,4 +5,5 @@ Game master rating
 location, image etc.
 could do a friends list type thing but maybe wait on that?  -->
 
-<h1> I'm a placeholder </h1> 
+<h1> I'm a placeholder </h1>
+<!-- basically make this a public profile page, with the ability to edit it, have it link on the show page!  -->
