--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -2,7 +2,7 @@
 <div class="row h-100 align-items-center">
   <div class="col">
   </div>
-  <div class="col-8 text-center bg-light">
+  <div class="col-12 text-center bg-light">
 
     <h1> <%= game.title %>  </h1>
     <p> <%= game.description %> </p>
@@ -10,7 +10,7 @@
     <% if(user && game.numberOfPlayers > 0) { %>
 
     <form action="/games/player/<%= game.id %>" method="post">
-      <input type="submit" value="Join Game" class="btn-success">
+      <input type="submit" value="Join Game" class="btn btn-success float-left m-0">
     </form>
     <% } %>
 
@@ -29,8 +29,8 @@
   <% } %>
 
 
- <!-- fix formating here so everything is on one line  -->
-    <div class="dropdown mt-1">
+ <!-- fix formating here so everything is on one line also fix width of elements and general look   -->
+    <div class="dropdown float-left ml-2">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="playersDropdown" data-toggle="dropdown">
         Player List
       </button>
@@ -52,7 +52,7 @@
 
 
 
-    <div class="h-25 w-25 d-inline-block mt-2">
+    <div class="h-25 w-25 d-inline-block  mx-auto">
       <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
       <p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
     </div>
